--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
+@font-face {
+    font-family: SolaimanLipi;
+    font-style: normal;
+    font-weight: 400;
+    src: url(fonts/SolaimanLipi.eot) format("embedded-opentype"), url(fonts/SolaimanLipi.woff) format("woff"),
+        url(fonts/SolaimanLipi.ttf) format("truetype"), url(fonts/SolaimanLipi.svg) format("svg");
+    font-display: swap;
+}
+
+*,
+body {
+    outline: 0 !important;
+    font-family: SolaimanLipi;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+.namaj-times .banner{
+    background-image: url(images/namaj-banner.jpg);
+    height: 250px;
+    width: 100%;
+    background-size: contain;
+}
+
+.namaj-times .intro{
+    margin-top: 30px;
+}
+.namaj-times .intro h2{
+    margin: 0;
+}
+.namaj-times .intro p{
+    margin-top: 10px;
+}
+
 .text-center {
     text-align: center;
 }
@@ -33,8 +70,7 @@
 .districtContainer {
     display: flex;
     justify-content: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin: 30px 10px;
     gap: 10px;
     align-items: center;
 }
