shown bangla month in date column

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     height: 250px;
     width: 100%;
     background-size: contain;
+    background-position: center;
 }
 
 .namaj-times .intro{
