--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ body{
     display: flex;
     justify-content: center;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
+    gap: 5px;
 }
 
 .buttonContainer button.button {
@@ -93,8 +95,7 @@ body{
     color: #000;
     font-size: 18px;
     border: none;
-    font-weight: 700;
-    margin-right: 5px;
+    font-weight: 700;    
     cursor: pointer;
     border-radius: 3px;
 }
